maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: not enough arguments for method Numeroter: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
 Numeroter()
          ^ShortestPathMaze:43: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
          if(sup<gauche && sup !=9999 && !aMurNord()){
                                                  ^ShortestPathMaze:48: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
            if (gauche<sup && gauche != 9999 && !aMurOuest()) {
                                                          ^